Change in flow - Inactive a/c, Unverified Student
- Dynamic profile/qualification updation tabs in student home
- Add Inactive a/c page
- Add Unverified student page
- Add Upload Image/Resume tab in settings tab
- Rectify codechef username regex in models

--- a/ipu/templates/account/base.html
+++ b/ipu/templates/account/base.html
@@ -7,6 +7,7 @@
 		</title>
 		<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome.min.css' %}" />
 		<link type="text/css" rel="stylesheet" href="{% static 'account/css/base.css' %}" />
+		<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" >
 		{% include 'material/includes/material_css.html' %}
 		{% block head %}{% endblock head %}
 	</head>
