--- a/ipu/templates/account/inactive.html
+++ b/ipu/templates/account/inactive.html
@@ -1,15 +1,16 @@
 {% extends 'account/base.html' %}
 {% load staticfiles %}
-{% block title %}Account Activation{% endblock title %}
+{% block title %}Account Inactive{% endblock title %}
 {% block content %}
 	<div class="container blue-text">
 		<div class="row">
 			<div class="col s8 offset-s2">
 				<h3 class="purple-text"> OOPS! </h3>
 				<br>
-				<p> An account activation link has been sent to your registered email address {{ user.email }}.</p>
+				<p> Your account is inactive. </p>
+				<p> An account activation link was sent to your registered email address {{ user.email }}.</p>
 				<p> Click on the activation link in the email. </p>
-				<p> Please check your SPAM folder also incase you didn't receive the email. </p>
+				<p> Please check your SPAM folder also incase you haven't yet received the email. </p>
 			</div>
 		</div>
 		<div class="row">
