--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -76,27 +76,99 @@
                     <ul class="right">
                     <li class="center hide-on-med-and-down">
                     <!--materialize search-bar-->
-                        <form id="search">
-                            <input type="text" name="q" placeholder="Search for Students, Colleges, and Companies..." />
-                            <ul id="results"></ul>
-                        </form>
-                    </li>
-                    <li class="hide-on-large-only">
-                        <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='flex';document.getElementById('fade').style.display='flex'"><i class="material-icons">search</i></a>
-                    </li>
-                    <li>
-                        <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown3"><i class="material-icons">add_alert</i></a>
-                    </li>
-                    <li>
-                        <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown2"><i class="material-icons">menu</i></a>
-                    </li>   
-                    <li>
-                        <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown1"><img src="{% block user_photo2 %}{% endblock %}" class="circle" id="img-corner"></a>
-                    </li>
-                </ul>
-                </div>
-            </nav>
-        </div> 
+
+                      <form id="search" method="post" action="index.html" >
+                         <input type="text" name="q" placeholder="Search..." />
+                         <ul id="results">
+                           <li class="tooltip"><a href="index.html">Search Result #1<br /></a>
+                               <span class="tooltiptext">
+                                 <div class="row">
+                                  <div class="col s12 m12 l12">
+                                    <div class="card blue-grey darken-1" id="ss">
+                                      <div class="card-content white-text" id="rr">
+                                        <div id="top-box">
+                                          <img class=class="responsive-img circle" src="{% static 'images/ipu-logo.png' %}" height="70x" width="80px">
+                                          <div id="top-side-box">
+                                            <h5>Name :</h5>
+                                            <h5>Info :</h5>
+                                          </div>
+                                        </div>
+                                        <hr>
+                                        <p>I am a very simple card. I am good at containing small bits of information.
+                                        I am convenient because I require little markup to use effectively.</p>
+                                      </div>
+                                      <hr>
+                                      <div>
+                                         <h5>Technical links</h5>
+                                          <ul class="collapsible" data-collapsible="accordion" id="tech">
+                                            <li>
+                                              <div class="collapsible-header">Code-Chef</div>
+                                              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                                            </li>
+                                            <li>
+                                              <div class="collapsible-header">Code-forces</div>
+                                              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                                            </li>
+                                            <li>
+                                              <div class="collapsible-header">SPOJ</div>
+                                              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                                            </li>
+                                          </ul>
+        
+                                      </div>
+                                      <div id="ff">
+                                        <div class="fixed-action-btn horizontal" id="main-btn">
+                                            <a class="btn-floating btn-large red">
+                                              <i class="large material-icons">supervisor_account</i>
+                                            </a>
+                                            <ul id="jj">
+                                              
+                                              
+                                              <li><a class="btn-floating"><i class="fa fa-github" id="github-icon" aria-hidden="true"></i>
+                                              </a></li>
+                                              <li><a class="btn-floating"><i class="fa fa-google-plus" aria-hidden="true" id="googleplus-icon"></i>
+
+                                              <li><a class="btn-floating"><i class="fa fa-linkedin-square" id="linkedin-icon" aria-hidden="true"></i>
+                                              </a></li>
+                                              <li><a class="btn-floating"><i class="fa fa-facebook-official"  id="fb-icon" aria-hidden="true"></i>
+                                              </a></li>
+
+                                              
+                                              </a></li>
+                                            </ul>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                              </div>
+                             </span>
+                           </li>
+                           <hr>
+                           <li><a href="index.html">Search Result #2</a></li><hr>
+                           <li><a href="index.html">Search Result #3</a></li><hr>
+                               <li><a href="index.html">Search Result #4</a></li>
+                         </ul>
+                      </form>
+                  </li>
+                  <li class="hide-on-large-only"><a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='flex';document.getElementById('fade').style.display='flex'"><i class="material-icons">search</i></a>
+                  </li>
+                  <li>
+                    <a id = 'notification_button' class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="{% url 'get_notifications' %}" data-activates="dropdown3"><i class="material-icons">add_alert</i></a>
+                  </li>
+
+                  <li>
+                    <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown2"><i class="material-icons">menu</i></a>
+                  </li>   
+                  <li>
+                    <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown1"><img src="{% block user_photo2 %}{% endblock %}" class="circle" id="img-corner"></a>
+                  </li>
+                    
+              </ul>
+           
+            </div>
+        </nav>
+      </div> 
+
 <!--navbar ends-->
 
         <main>
@@ -118,29 +190,38 @@
                     </div>
                 </div>
             </div>
+
         </main>
 
         <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
         {% include 'material/includes/material_js.html' %}
         <script type="text/javascript">
-			$(document).ready(function(e) {
-	            $('#dropdown3').on('click', function(e){e.stopPropagation();});
-    	        $('.dropdown-button').on('click', function(e){e.preventDefault()});
-				$('nav .brand-logo').on('click', function(e){location.href='';});
-			});
+      			$(document).ready(function(e) {
+      	            $('#dropdown3').on('click', function(e){e.stopPropagation();});
+          	        $('.dropdown-button').on('click', function(e){e.preventDefault()});
+      				$('nav .brand-logo').on('click', function(e){location.href='';});
+      			});
 		
 		// Mapping dropdown links to tabs
-		$('#dropdown1 a').each(function(i, a){
-			var el = $(a);
-			var target = el.data('links');
-			if (!target)
-				return true;
-			var target_el = $('#tab-bar').find("[href='#" + target + "']");
-			if(!target_el.length)
-				return true;
-			el.on('click', function(e){e.preventDefault();target_el[0].click();});
-		});
+		    $('#dropdown1 a').each(function(i, a){
+      			var el = $(a);
+      			var target = el.data('links');
+      			if (!target)
+      				return true;
+      			var target_el = $('#tab-bar').find("[href='#" + target + "']");
+      			if(!target_el.length)
+      				return true;
+      			el.on('click', function(e){e.preventDefault();target_el[0].click();});
+      		});
         </script>
+        <script type="text/javascript" src="{% static 'notification/get_notification.js' %}"></script>
+        <script>
+          $(document).ready(function () {
+            GetNotification.init();
+          });
+        </script>
+
+
         {% block scripts %}{% endblock %}
     </body>
 </html>
