--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -115,7 +115,7 @@
 {% endblock %}
 
 {% block scripts %}
-	<script type="text/javascript" src="{% static 'student/home.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'student/update.js' %}"></script>
 	<script>
