--- a/ipu/templates/company/edit.html
+++ b/ipu/templates/company/edit.html
@@ -1,14 +1,16 @@
-{% extends 'account/base.html' %}
-{% block title %} Edit Profile {% endblock title %}
-{% block content %}
-    {% if update %}
-        <p>Your profile has been updated.</p>
-    {% endif %}
-    <form enctype="multipart/form-data" action="{% url 'edit_company_profile' %}" method='POST' id='company-profile-edit'>
-        {% csrf_token %}
-        {{ company_edit_form.as_p }}
-        <input type="submit" name="company_profile" value="Update Profile" />
-    </form>
-    <br />
-	<p> <a href="{% url 'company_home' %}"> Go Home </a></p>
-{% endblock content %}
+{% load staticfiles %}
+{% load material_form %}
+<!--
+<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+{% include 'material/includes/material_js.html' %}
+-->
+{% if success_msg %}<div class="card green accent-1 center success"><p>{{ success_msg }}</p></div>{% endif %}
+<form action="{% url 'edit_company_profile' %}" method='POST' id="company-edit-form" enctype="multipart/form-data">
+	{% csrf_token %}
+	{% form form=company_edit_form %}{% endform %}
+	<div class="row">
+		<div class="col s6 offset-s2">
+			<button class="btn btn-waves" type="submit">Update</button>
+		</div>
+	</div>
+</form>
