--- a/ipu/templates/faculty/profile_form.html
+++ b/ipu/templates/faculty/profile_form.html
@@ -1,10 +1,13 @@
 {% load staticfiles %}
 {% load material_form %}
+<!--
+<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
 {% include 'material/includes/material_js.html' %}
+-->
 {% if success_msg %}<div class="card green accent-1 center success"><p>{{ success_msg }}</p></div>{% endif %}
-<form action="{% url 'edit_account' %}" method='POST' id="edit-account-form">
+<form action="{% url 'edit_create_faculty' %}" method='POST' id="edit-profile-form" enctype="multipart/form-data">
 	{% csrf_token %}
-	{% form form=edit_account_form %}{% endform %}
+	{% form form=faculty_edit_form %}{% endform %}
 	<div class="row">
 		<div class="col s6 offset-s2">
 			<button class="btn btn-waves" type="submit">Update</button>
