--- a/ipu/templates/faculty/verify_profile_form.html
+++ b/ipu/templates/faculty/verify_profile_form.html
@@ -3,7 +3,7 @@
 
 <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
 {% include 'material/includes/material_js.html' %}
-<div class="card green accent-1 center success">{% if success_msg %}<p>{{ success_msg }}</p>{% endif %}</div>
+{% if success_msg %}<div class="card green accent-1 center success"><p>{{ success_msg }}</p></div>{% endif %}
 <form action="{% url 'edit_student_profile' %}" method='POST' id="profile-form" enctype="multipart/form-data">
 	{% csrf_token %}
 	{% form form=profile_form %}{% endform %}
