--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -111,7 +111,7 @@
                             <!--naming for tabs-->
                             {% block tabs %}
                             <!--each li  represents a new tab with the name-->
-                            <li class="tab col s2"><a class="active" href="#test1">Test 1</a></li>
+<!--                            <li class="tab col s2"><a class="active" href="#test1">Test 1</a></li> -->
                             {% endblock %}
                         </ul>
                     </div>
