--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -38,7 +38,7 @@
 {% block tabs%}
 	<li class="tab col s2"><a class="active" href="#tab1">Companies Visiting</a></li>
 	<li class="tab col s2"><a href="#tab2">Status</a></li>
-	<li id = "notification" class="tab col s2" url="{% url 'select_streams' %}"><a href="#tab3">Notification</a></li>
+	<li id = "notification" class="tab col s2" url="{% url 'select_streams' %}"><a href="#notifications">Notification</a></li>
 	<li class="tab col s2"><a href="#create-faculty">Create Faculty</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
 {% endblock %}
@@ -46,7 +46,7 @@
 {% block tabs_content %}
 	<div id="tab1" class="col s12">Data 1</div>
 	<div id="tab2" class="col s12">Data 2</div>
-	<div id="tab3" class="col s12">Data 3</div>
+	<div id="notifications" class="col s12">Data 3</div>
 	<div id="create-faculty" class="col s8 offset-s2">
 		<h4 class="row center" style="color: goldenrod">Create Faculty</h4>
 		<form method='POST' action="{% url 'faculty_signup' %}" id='create-faculty-form' class="card-panel">
