--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block menu_icon_dropdown %}
-	<li><a href="#">wrgwearg</a></li>
+	<li><a href="#">Add faculty</a></li>
     <li class="divider"></li>
 {% endblock %}
 
