--- a/ipu/templates/company/new_home.html
+++ b/ipu/templates/company/new_home.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block menu_icon_dropdown %}
-	<li><a href="#">wrgwearg</a></li>
+	<li><a href="#">swgasgfw</a></li>
     <li class="divider"></li>
 {% endblock %}
 
