--- a/ipu/templates/account/inactive.html
+++ b/ipu/templates/account/inactive.html
@@ -1,11 +1,12 @@
 {% extends 'account/base.html' %}
 {% load staticfiles %}
 {% block title %}Account Inactive{% endblock title %}
+{% block head %} <link type="text/css" rel="stylesheet" href="{% static 'student/inactive.css'%}"  media="screen,projection"/> {% endblock %}
 {% block content %}
 	<div class="container blue-text">
 		<div class="row">
 			<div class="col s8 offset-s2">
-				<h3 class="purple-text"> OOPS! </h3>
+				<h3> OOPS! </h3>
 				<br>
 				<p> Your account is inactive. </p>
 				<p> An account activation link was sent to your registered email address {{ user.email }}.</p>
