--- a/ipu/templates/student/pub_profile.html
+++ b/ipu/templates/student/pub_profile.html
@@ -1,5 +1,38 @@
 {% load staticfiles %}
 {% include 'material/includes/material_js.html' %}
+
+<style type="text/css">
+	.collapsible-header
+	{
+		color: #DAA520;
+		background-color: #1c262f;
+		border-left: solid;
+		border-color: white;
+		border-right: solid;
+		border-color: white;
+		border-left-width: 1px;
+		border-right-width: 1px;
+	}
+    
+    h5
+    {
+    	color: #DAA520;
+    }
+
+    .collapsible-body
+    {
+    	border-left: solid;
+		border-color: white;
+		border-right: solid;
+		border-color: white;
+		border-left-width: 1px;
+		border-right-width: 1px;
+
+    }
+
+
+
+</style>
 <div class="row">
 	<div class="col s12 m12 l12">
 		<div class="card" id="ss">
@@ -17,32 +50,28 @@
 			</div>
 			<hr>
 			{% if student.tech %}
-			<div>
-				<h5>Technical Profiles</h5>
-				<ul class="collapsible" data-collapsible="accordion" id="tech">
-					{% if student.tech.codechef %}
+			<ul class="collapsible" data-collapsible="accordion">
+			        {% if student.tech.codechef %}
 					<li>
 						<div class="collapsible-header">Codechef</div>
-						<div class="collapsible-body" id="codechef"></div>
+						<div class="collapsible-body" id="codechef">Name :<br>Rank :<br>URL :</div>
 					</li>
 					{% endif %}
 					{% if student.tech.codeforces %}
 					<li>
 						<div class="collapsible-header">Codeforces</div>
-						<div class="collapsible-body" id="codeforces"></div>
+						<div class="collapsible-body" id="codeforces">Name :<br>Rank :<br>URL :</div>
 					</li>
 					{% endif %}
 					{% if student.tech.spoj %}
 					<li>
 						<div class="collapsible-header">SPOJ</div>
-						<div class="collapsible-body" id="spoj"></div>
+						<div class="collapsible-body" id="spoj">Name :<br>Rank :<br>URL :</div>
 					</li>
-					{% endif %}
-				</ul>
-			</div>
-			<hr>
-			{% endif %}
+				   {% endif %}
+			</ul>
 			
+			{% endif %}
 			<div id="ff">
 				<div class="fixed-action-btn horizontal" id="main-btn">
 					<a class="btn-floating btn-large red"><i class="large material-icons">supervisor_account</i></a>
@@ -57,15 +86,18 @@
 							{% endif %}
 						{% endif %}
 						{% if student.profile.social %}
-							{% if google %}
-							<li><a class="btn-floating" target="_blank" href="{{ google }}"><i class="fa fa-google-plus" id="googleplus-icon" aria-hidden="true"></i></a></li>
-							{% endif %}
 							{% if linkedin %}
 							<li><a class="btn-floating" target="_blank" href="{{ linkedin }}"><i class="fa fa-linkedin-square" id="linkedin-icon" aria-hidden="true"></i></a></li>
 							{% endif %}
 							{% if facebook %}
 							<li><a class="btn-floating" target="_blank" href="{{ facebook }}"><i class="fa fa-facebook-official" id="fb-icon" aria-hidden="true"></i></a></li>
 							{% endif %}
+							<!--
+							{% if google %}
+							<li><a class="btn-floating" target="_blank" href="{{ google }}"><i class="fa fa-google-plus" id="googleplus-icon" aria-hidden="true"></i></a></li>
+							{% endif %}
+							-->
+
 						{% endif %}
 					</ul>
 					{% endif %}
