--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -17,9 +17,12 @@ nav .brand-logo {
 
 #dropdown1
 {
-    width: 250px;
+    max-width: 250px;
     margin-top: 10px;
 }
+
+
+
 
 #dropdown2
 {
@@ -99,6 +102,8 @@ nav ul a {
       color: white;
     }
 
+    
+
     .white_content i
     {
         position: absolute;
@@ -107,6 +112,7 @@ nav ul a {
         color: white;
     }
 
+   
     #post-navbar
     {
       display: flex;
