--- a/ipu/templates/student/pub_profile.html
+++ b/ipu/templates/student/pub_profile.html
@@ -29,11 +29,10 @@
 		border-right-width: 1px;
 
     }
-
-
+    
 
 </style>
-<div class="row">
+<div class="row" id="out-box">
 	<div class="col s12 m12 l12">
 		<div class="card" id="ss">
 			<div class="card-content white-text" id="rr">
