Implement recruitment flow properly
- All recruitment forms through AJAX
- Rendering competitive coding profiles' data
- Add Paygrade option for student
- Changes in recruitment models

--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -563,8 +563,8 @@ form#search input {
 }
 
 #ss {
-/*    background-color: #7d97ad; */
-    background-color: #2e3d49;
+    background-color: #7d97ad;
+/*    background-color: #2e3d49; */
 }
 
 .tab-content{
