--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -1,15 +1,24 @@
-{% extends 'account/base.html' %}
-{% block title %} Association Requests {% endblock title %}
-{% block content %}
-	{% for ass in associations %}
-		<p> {{ ass.obj }} </p>
-		<ul>
-			<li><a href=" {{ ass.url.session_url }} ">Accept</a></li>
-			<li><a href=" {{ ass.url.dissoci_url }} ">Decline</a></li>
-		</ul>
-		<hr />
-		{% empty %}
-			<p>No requests at the moment.</p>
-			{# Add link to create requests #}
-	{% endfor %}
-{% endblock content %}
+{% load staticfiles %}
+<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+{% include 'material/includes/material_js.html' %}
+<div class="container">
+	<div class="col s8 offset-s2 request-content">
+		{% for ass in associations %}
+			<div class="col s12 card-panel blue-grey darken-1">
+				<div class="card-content white-text">
+					<span class="card-title">Association Request</span>
+					<p> {{ ass.obj }} </p>
+					<p> {{ ass.obj.salary }} </p>
+				</div>
+				<hr />
+				<div class="card-action yellow-text">
+					<a href=" {{ ass.url.session_url }} ">Accept</a>
+					<a href=" {{ ass.url.dissoci_url }} ">Decline</a>
+				</div>
+				<hr />
+			</div>
+			{% empty %}
+				<p>No requests at the moment.</p>
+		{% endfor %}
+	</div>
+</div>
