--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -57,15 +57,23 @@
 {% endblock %}
 
 {% block tabs%}
-	<li class="tab col s2"><a class="active" href="#tab1">Companies Visiting</a></li>
-	<li class="tab col s2"><a href="#tab2">Status</a></li>
+	<li class="tab col s2"><a class="active" href="#associate">Associate With Companies</a></li>
+	<li id = "request" class="tab col s2" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
 	<li id = "notification" class="tab col s2" url="{% url 'select_streams' %}"><a href="#notifications">Notification</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
 {% endblock %}
 
 {% block tabs_content %}
-	<div id="tab1" class="col s12">Data 1</div>
-	<div id="tab2" class="col s12">Data 2</div>
+	<div id="associate" class="col s12">
+		<form method="POST" action={% url 'with_prog' %} id="associate-form" class="col s8 offset-s2">
+			{% csrf_token %}
+			{% form form=associate_actors_only_form%}{% endform %}
+			<div class="col s8 offset-s2">
+				<button type="submit" class="btn btn-waves" style="width: 100%">Get Programmes</button>
+			</div>
+		</form>
+	</div>
+	<div id="requests" class="col s12">Data 2</div>
 	<div id="notifications" class="col s12">Data 3</div>
 	<!-- -->
 	<div id="settings" class="col s12">
@@ -110,11 +118,13 @@
 	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'notification/create_notification.js' %}"></script>
+	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
 	<script>
 		$(document).ready(function() {
 			Search.init();
-			Settings.init(['edit-account-form', 'edit-profile-form', 'social-profile-form', 'create-faculty-form']);
-		});
+			Settings.init(['edit-account-form', 'edit-profile-form', 'social-profile-form', 'create-faculty-form', 'associate-form']);
 			Notification.init();
+			Request.init();
+		});
 	</script>
 {% endblock scripts %}
