--- a/ipu/templates/recruitment/associate.html
+++ b/ipu/templates/recruitment/associate.html
@@ -1,10 +1,13 @@
-{% extends 'account/base.html' %}
+{% load staticfiles %}
 {% load material_form %}
-{% block title %} Associate {% endblock %}
-{% block content %}
-	<form method='POST' action="{% url 'associate' %}" id="associate-form">
-		{% csrf_token %}
-		{% form form=association_form %}{% endform %}
-		<input type="submit" value="Associate" />
-	</form>
-{% endblock content %}
+<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+{% include 'material/includes/material_js.html' %}
+<form action="{% url 'associate' %}" method='POST' id="associate-form" class="col s8 offset-s2">
+	{% csrf_token %}
+	{% form form=ass_form %}{% endform %}
+	<div class="row">
+		<div class="col s6 offset-s2">
+			<button class="btn btn-waves" type="submit">Associate</button>
+		</div>
+	</div>
+</form>
