--- a/ipu/templates/recruitment/dissociate.html
+++ b/ipu/templates/recruitment/dissociate.html
@@ -1,9 +1,13 @@
-{% extends 'account/base.html' %}
-{% block title %} Dissociate {% endblock %}
-{% block content %}
-	<form method='POST' action="{% url 'dissociate' %}" id="dissociate-form">
-		{% csrf_token %}
-		{{ dissociation_form.as_p }}
-		<input type="submit" value="Dissociate" />
-	</form>
-{% endblock content %}
+{% load staticfiles %}
+{% load material_form %}
+<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+{% include 'material/includes/material_js.html' %}
+<form method='POST' action="{% url 'dissociate' %}" id="dissociate-form">
+	{% csrf_token %}
+	{% form form=dissociation_form %}{% endform %}
+	<div class="row">
+		<div class="col s6 offset-s2">
+			<button class="btn btn-waves" type="submit">Dissociate</button>
+		</div>
+	</div>
+</form>
