--- a/ipu/templates/recruitment/with_programme.html
+++ b/ipu/templates/recruitment/with_programme.html
@@ -2,12 +2,12 @@
 {% load material_form %}
 <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
 {% include 'material/includes/material_js.html' %}
-<form method='POST' action="{% url 'createsession' %}" id="create-session-form">
+<form action="{% url 'with_streams' %}" method='POST' id="associate-form" class="col s8 offset-s2">
 	{% csrf_token %}
-	{% form form=session_creation_form %}{% endform %}
+	{% form form=prog_form %}{% endform %}
 	<div class="row">
 		<div class="col s6 offset-s2">
-			<button class="btn btn-waves" type="submit">Create Session</button>
+			<button class="btn btn-waves" type="submit">Get Streams</button>
 		</div>
 	</div>
 </form>
