minor badge bug fixed

--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -15,7 +15,7 @@ nav .brand-logo {
 
 #notifications_badge
 {
-  position: absolute;
+  position: fixed;
   right: 98px;
   top: 7px;
   z-index: 999;
